Fix: Small fixes

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -213,16 +213,14 @@
                         {{ component('button', {
                             content: 'Stacks',
                             ghost: true,
-                            href: path('app_stack_index'),
-                            isButton: false
+                            href: path('app_stack_index')
                         }) }}
 
                         {{ component('button', {
                             centered: false,
                             content: 'Techs',
                             ghost: true,
-                            href: path('app_tech_index'),
-                            isButton: false
+                            href: path('app_tech_index')
                         }) }}
                     </div>
                 </div>
