--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -30,7 +30,7 @@
             {{ encore_entry_script_tags("app") }}
         {% endblock %}
     </head>
-    <body>
+    <body class="bg-base-200">
         <div class="drawer">
             <input id="mobile-drawer" type="checkbox" class="drawer-toggle" aria-label="{{ "common.menu"|trans }}" />
             <div class="drawer-content flex flex-col">
@@ -45,7 +45,7 @@
                 {% endblock %}
 
                 {% block nav %}
-                    <nav class="navbar bg-base-100">
+                    <nav class="navbar bg-primary">
                         <div class="navbar-start gap-2">
                             <div
                                 id="global-search"
@@ -62,7 +62,7 @@
                                             data-action="mousedown->class-modal#open:prevent" />
 
                                         <div class="tooltip tooltip-bottom" data-tip="{{ 'common.global_search'|trans }}">
-                                            {{ component("button", { icon: "search", square: true, submit: true, class: "rounded-l-none", ariaLabel: "common.global_search"|trans }) }}
+                                            {{ component("button", { icon: "search", square: true, submit: true, class: "border-base-100 border-2 rounded-l-none", ariaLabel: "common.global_search"|trans }) }}
                                         </div>
                                     </div>
                                 </form>
@@ -84,28 +84,24 @@
                             <div class="lg:flex gap-2 hidden">
                                 {{ component('button', {
                                     content: 'Stacks',
-                                    ghost: true,
-                                    href: path('app_stack_index'),
-                                    isButton: false
+                                    href: path('app_stack_index')
                                 }) }}
 
                                 {{ component('button', {
                                     content: 'Techs',
-                                    ghost: true,
-                                    href: path('app_tech_index'),
-                                    isButton: false
+                                    href: path('app_tech_index')
                                 }) }}
                             </div>
                         </div>
                         <div class="navbar-center">
                             <a href="{{ path("app_homepage") }}">
-                                {{ component('button', { content: 'common.app_name'|trans, class: 'text-xl normal-case', ghost: true }) }}
+                                {{ component('button', { content: 'common.app_name'|trans, class: 'text-xl normal-case' }) }}
                             </a>
                         </div>
                         <div class="navbar-end gap-4">
                             <div class="tooltip tooltip-bottom" data-tip="{{ 'common.switch_theme'|trans }}">
                                 <a role="button" aria-label="{{ 'common.switch_theme'|trans }}" href="{{ path('app_change_theme', { mode: themeMode }) }}">
-                                    {% component button with { circle: true, centered: false, ghost: true, ariaLabel: "common.switch_theme"|trans } %}
+                                    {% component button with { circle: true, centered: false, ariaLabel: "common.switch_theme"|trans } %}
                                         {% block content %}
                                             <label class="swap swap-rotate swap-active">
                                                 <svg data-theme-target="light" class="{{ isLight ? 'swap-on' : 'swap-off' }} fill-current w-6 h-6" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M5.64,17l-.71.71a1,1,0,0,0,0,1.41,1,1,0,0,0,1.41,0l.71-.71A1,1,0,0,0,5.64,17ZM5,12a1,1,0,0,0-1-1H3a1,1,0,0,0,0,2H4A1,1,0,0,0,5,12Zm7-7a1,1,0,0,0,1-1V3a1,1,0,0,0-2,0V4A1,1,0,0,0,12,5ZM5.64,7.05a1,1,0,0,0,.7.29,1,1,0,0,0,.71-.29,1,1,0,0,0,0-1.41l-.71-.71A1,1,0,0,0,4.93,6.34Zm12,.29a1,1,0,0,0,.7-.29l.71-.71a1,1,0,1,0-1.41-1.41L17,5.64a1,1,0,0,0,0,1.41A1,1,0,0,0,17.66,7.34ZM21,11H20a1,1,0,0,0,0,2h1a1,1,0,0,0,0-2Zm-9,8a1,1,0,0,0-1,1v1a1,1,0,0,0,2,0V20A1,1,0,0,0,12,19ZM18.36,17A1,1,0,0,0,17,18.36l.71.71a1,1,0,0,0,1.41,0,1,1,0,0,0,0-1.41ZM12,6.5A5.5,5.5,0,1,0,17.5,12,5.51,5.51,0,0,0,12,6.5Zm0,9A3.5,3.5,0,1,1,15.5,12,3.5,3.5,0,0,1,12,15.5Z"/></svg>
@@ -118,7 +114,6 @@
                             <div class="hidden lg:block">
                                 {% include "common/_locale_switcher.html.twig" only %}
                             </div>
-
                             <nav id="navbar-user-dropdown">
                                 {% include "common/_user_dropdown.html.twig" with { permanent: true } only %}
                             </nav>
