--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -8,51 +8,77 @@
     {{ "page.homepage.description"|trans }}
 {% endblock %}
 
+{% block main_title %}
+    {{ "page.homepage.main_title"|trans }}
+{% endblock %}
+
 {% block main_body %}
-    {% set items = [{ name: "symfony" }, { name: "twig" }, { name: "turbo" }] %}
+    <p class="mx-auto max-w-3xl">
+        {{ "page.homepage.main_description"|trans }}
+    </p>
 
     <div class="grid gap-6 lg:grid-cols-2">
-        {% component shortList with { items, link: path("app_stack_index") } %}
+        {% component shortList with { items: trendingTechs, itemPictureProperty: "picture", itemFileProperty: "file", link: path("app_stack_index") } %}
         {% block header %}
             <div class="flex items-center gap-2">
                 <div class="text-error">
                     {% include "icon/fire.html.twig" %}
                 </div>
-                <span>trending techs</span>
+                <h2>
+                    {{ "page.homepage.trending_techs"|trans }}
+                </h2>
             </div>
         {% endblock %}
+        {% block item %}
+            <a href="{{ path("app_stack_index") }}">{{ parent() }}</a>
+        {% endblock %}
         {% endcomponent %}
-        
-        {% component shortList with { items, link: path("app_stack_index") } %}
+
+        {% component shortList with { items: recentTechs, itemPictureProperty: "picture", itemFileProperty: "file", link: path("app_stack_index") } %}
         {% block header %}
             <div class="flex items-center gap-2">
                 <div class="text-info">
                     {% include "icon/clock.html.twig" %}
                 </div>
-                <span>recently added techs</span>
+                <h2>
+                    {{ "page.homepage.recently_added_techs"|trans }}
+                </h2>
             </div>
+        {% endblock %}
+        {% block item %}
+            <a href="{{ path("app_stack_index") }}">{{ parent() }}</a>
         {% endblock %}
         {% endcomponent %}
 
-        {% component shortList with { items, link: path("app_stack_index") } %}
+        {% component shortList with { items: trendingCategories, link: path("app_stack_index") } %}
         {% block header %}
             <div class="flex items-center gap-2">
                 <div class="text-error">
                     {% include "icon/fire.html.twig" %}
                 </div>
-                <span>trending categories</span>
+                <h2>
+                    {{ "page.homepage.trending_categories"|trans }}
+                </h2>
             </div>
+        {% endblock %}
+        {% block item %}
+            <a href="{{ path("app_stack_index") }}">{{ parent() }}</a>
         {% endblock %}
         {% endcomponent %}
 
-        {% component shortList with { items, link: path("app_stack_index") } %}
+        {% component shortList with { items: recentStacks, link: path("app_stack_index") } %}
         {% block header %}
             <div class="flex items-center gap-2">
                 <div class="text-info">
                     {% include "icon/clock.html.twig" %}
                 </div>
-                <span>recently added categories</span>
+                <h2>
+                    {{ "page.homepage.recently_added_stacks"|trans }}
+                </h2>
             </div>
+        {% endblock %}
+        {% block item %}
+            <a href="{{ path("app_stack_index") }}">{{ parent() }}</a>
         {% endblock %}
         {% endcomponent %}
     </div>
