--- a/templates/components/shortList.html.twig
+++ b/templates/components/shortList.html.twig
@@ -5,27 +5,35 @@
 
             {% endblock %}
         </div>
-        <a class="flex gap-3 text-secondary" href="{{ link }}">More<span>{{ ">" }}</span></a>
+        {% if link %}
+            <a class="flex items-center gap-3 text-secondary" href="{{ link }}"><span>{{ "common.more"|trans }}</span>{% include "icon/chevron_right.html.twig" %}</a>
+        {% endif %}
     </div>
     <div class="card-body">
-        {% for key, item in items %}
-            <a href="">
+        {% for item in items %}
+            {% block item %}
                 <div class="flex h-12 items-center gap-8 rounded-full py-3 px-6 hover:bg-base-200">
-                    <div class="flex gap-4 font-medium">
+                    <div class="flex gap-4 font-medium" aria-label="{{ "common.position"|trans({ position: loop.index }) }}">
                         {% include "icon/star.html.twig" %}
-                        <span>{{ key + 1 }}</span>
+                        <span>{{ loop.index }}</span>
                     </div>
                     <span class="flex h-full items-center gap-2 font-semibold">
-                        <div class="avatar h-full">
-                            <div class="h-full rounded-full">
-                                {{ component("image", { src: " ", filter: "avatar_small", alt: "default", width: 48, height: 48 }) }}
-                            </div>
-                        </div>
+                        {% set name = get_property(item, itemNameProperty) %}
 
-                        {{ item.name }}
+                        {% if itemPictureProperty and itemFileProperty %}
+                            {% set src = vich_uploader_asset(get_property(item, itemPictureProperty)) %}
+
+                            <div class="avatar h-full">
+                                <div class="h-full">
+                                    {{ component("image", { src: src ?? asset(no_picture_fallback), class: "mask mask-squircle", filter: "short_list", alt: name, width: 24, height: 24 }) }}
+                                </div>
+                            </div>
+                        {% endif %}
+
+                        {{ name }}
                     </span>
                 </div>
-            </a>
+            {% endblock %}
         {% endfor %}
     </div>
 </div>
