feat: add show page for each section

--- a/templates/components/table/row/text.html.twig
+++ b/templates/components/table/row/text.html.twig
@@ -1,5 +1,5 @@
 {% trans_default_domain "tables" %}
 
 <td>
-    <span>{{ config.value }}</span>
+    <span>{{ config.value|u.truncate(75, '...') }}</span>
 </td>
