--- a/templates/form/theme.html.twig
+++ b/templates/form/theme.html.twig
@@ -57,8 +57,8 @@
 
 {# Choice #}
 
-{# {%- block choice_widget -%}
-    {%- set widget_class = widget_class|default('select select-bordered w-full max-w-xs') -%}
+{%- block choice_widget -%}
+    {%- set widget_class = widget_class|default('max-w-xs') -%}
     {% if expanded %}
         {{- block('choice_widget_expanded') -}}
     {% else %}
@@ -76,29 +76,7 @@
             </div>
         {% endfor -%}
     </div>
-{%- endblock choice_widget_expanded -%} #}
-
-{# {% block choice_widget_collapsed %}
-    {%- if required and placeholder is none and not placeholder_in_choices and not multiple and (attr.size is not defined or attr.size <= 1) -%}
-    {% set required = false %}
-    {%- endif -%}
-    <select class="select select-bordered w-full max-w-xs" {% if multiple %} multiple="multiple"{% endif %}>
-    {%- if placeholder is not none -%}
-        <option value=""{% if required and value is empty %} selected="selected"{% endif %}>{{ placeholder != '' ? (translation_domain is same as(false) ? placeholder : placeholder|trans({}, translation_domain)) }}</option>
-    {%- endif -%}
-    {%- if preferred_choices|length > 0 -%}
-        {% set options = preferred_choices %}
-        {% set render_preferred_choices = true %}
-        {{- block('choice_widget_options') -}}
-        {%- if choices|length > 0 and separator is not none -%}
-            <option disabled="disabled">{{ separator }}</option>
-        {%- endif -%}
-    {%- endif -%}
-    {%- set options = choices -%}
-    {%- set render_preferred_choices = false -%}
-    {{- block('choice_widget_options') -}}
-    </select>
-{% endblock %} #}
+{%- endblock choice_widget_expanded -%}
 
 {# File #}
 
