:feat: contact us and abous us fr and eng

--- a/templates/info/about_us.html.twig
+++ b/templates/info/about_us.html.twig
@@ -11,3 +11,7 @@
 {% block main_title %}
     {{ "page.about_us.title"|trans }}
 {% endblock %}
+
+{% block main_body %}
+    <p>{{ "page.about_us.presentation"|trans }}</p>
+{% endblock %}
