--- a/templates/info/contact.html.twig
+++ b/templates/info/contact.html.twig
@@ -11,3 +11,7 @@
 {% block main_title %}
     {{ "page.contact.title"|trans }}
 {% endblock %}
+
+{% block main_body %}
+    <p>{{ "page.contact.presentation"|trans }}</p>
+{% endblock %}
