--- a/templates/admin/category/index.html.twig
+++ b/templates/admin/category/index.html.twig
@@ -2,20 +2,12 @@
 
 {% trans_default_domain "admin" %}
 
-{% block title %}
-    {{ "page.category.title"|trans }}
-{% endblock %}
-
-{% block description %}
-    {{ "page.category.description"|trans }}
-{% endblock %}
-
-{% block main_title %}
-    {{ "page.category.title"|trans }}
-{% endblock %}
-
 {% block main_body %}
     <turbo-frame id="table_crud" data-turbo-action="advance">
+        <h1 class="text-center text-4xl">
+            {{ "page.category.title"|trans }}
+        </h1>
+
         <div class="flex gap-2 flex-col md:flex-row">
             {{ knp_menu_render('back_office', { template: knp_custom_menu }) }}
             {{ component('table', { config }) }}
