Feat: Added components #5

--- a/templates/components/listItem.html.twig
+++ b/templates/components/listItem.html.twig
@@ -9,7 +9,7 @@
 
             <div class="avatar h-full">
                 <div class="h-full">
-                    {{ component("image", { src: src ?? asset(no_picture_fallback), class: "mask mask-squircle", filter: "short_list", alt: name, width: 24, height: 24 }) }}
+                    {{ component("image", { src: src ?? asset(no_picture_fallback), class: "rounded-full", filter: "short_list", alt: name, width: 24, height: 24 }) }}
                 </div>
             </div>
         {% endif %}
